0023427: Unused C-sources in OSD package

Deleted unused sources in OSD package